RESOLVED FIXED96926
[BlackBerry] Fix compile problems in WebKit/blackberry
https://bugs.webkit.org/show_bug.cgi?id=96926
Summary [BlackBerry] Fix compile problems in WebKit/blackberry
Rob Buis
Reported 2012-09-17 08:55:20 PDT
This code is slightly out of date and so will not compile, fix it.
Attachments
Patch (9.12 KB, patch)
2012-09-17 09:01 PDT, Rob Buis
tonikitoo: review+
Rob Buis
Comment 1 2012-09-17 09:01:31 PDT
Rob Buis
Comment 2 2012-09-17 09:07:09 PDT
Note You need to log in before you can comment on or make changes to this bug.